# YAECS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  YAECS.cbp  main.cpp
examples/: example1.cpp
include/: Component.h  ComponentManager.h  Entity.h  EntityDestroyerRAII.h  Pools.h  Space.h  System.h  TupleGet.h
src/: Space.cpp  main.cpp
